--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <section>
+            <section class="logo">
                 WebStudio
             </section>
             <section>
