--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <header>
         <nav>
-            <section class="logo">
+            <div class="logo">
                 WebStudio
-            </section>
-            <section>
+            </div>
+            <div>
                 <ul>
                     <li><a href="">Студия</a></li>
                     <li><a href="">Портфолио</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
-            </section>
+            </div>
         </nav>
         <section>
             <ul>
