--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo">
                 WebStudio
             </div>
-            <div>
+            <div class="header-navigation">
                 <ul>
                     <li><a href="">Студия</a></li>
                     <li><a href="">Портфолио</a></li>
