--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 </ul>
             </div>
         </nav>
-        <section>
+        <div class="header-contacts">
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </section>
+        </div>
     </header>
     <main>
         <section>
@@ -97,14 +97,14 @@
         </section>
     </main>
     <footer>
-        <section>
+        <div class="footer-contacts">
             <p>WebStudio</p>
             <ul>
                 <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
                 <li>info@example.com</li>
                 <li>+38 099 111 11 11</li>
             </ul>
-        </section>
+        </div>
     </footer>
 </body>
 
