--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
         <section>
             <ul>
                 <li>
-                    <p>
+                    <section>
                         <h4>Внимание к деталям</h4>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
-                    </p>
+                    </section>
                 </li>
                 <li>
-                    <p>
+                    <section>
                         <h4>Пунктуальность</h4>
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
+                    </section>
                 </li>
                 <li>
-                    <p>
+                    <section>
                         <h4>Планирование</h4>
                         Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
+                    </section>
                 </li>
                 <li>
-                    <p>
+                    <section>
                         <h4>Современные технологии</h4>
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
+                    </section>
                 </li>
             </ul>
         </section>
