--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1>Эффективные решения для вашего бизнеса</h1>
             Заказать услугу
         </section>
-        <section>
+        <div>
             <ul>
                 <li>
                     <section>
@@ -61,7 +61,7 @@
                     </section>
                 </li>
             </ul>
-        </section>
+        </div>
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
