--- a/index.html
+++ b/index.html
@@ -65,31 +65,31 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.png" alt="box1"></li>
-                <li><img src="./images/box2.png" alt="box2"></li>
-                <li><img src="./images/box3.png" alt="box3"></li>
+                <li><img src="./images/box1.png" alt="box1" width="370"></li>
+                <li><img src="./images/box2.png" alt="box2" width="370"></li>
+                <li><img src="./images/box3.png" alt="box3" width="370"></li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/igor.jpg" alt="Игорь Демьяненко">
+                    <img src="./images/igor.jpg" alt="Игорь Демьяненко" width="270">
                     <p>Игорь Демьяненко</p>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/olga.jpg" alt="Ольга Репина">
+                    <img src="./images/olga.jpg" alt="Ольга Репина" width="270">
                     <p>Ольга Репина</p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/nikolai.jpg" alt="Николай Тарасов">
+                    <img src="./images/nikolai.jpg" alt="Николай Тарасов" width="270">
                     <p>Николай Тарасов</p>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/mikhail.jpg" alt="Михаил Ермаков">
+                    <img src="./images/mikhail.jpg" alt="Михаил Ермаков" width="270">
                     <p>Михаил Ермаков</p>
                     <p>UI Designer</p>
                 </li>
