--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            Заказать услугу
+            <button type="button">Заказать услугу</button>
         </section>
         <div>
             <ul>
