--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <section class="logo">
                 WebStudio
-            </div>
-            <div class="header-navigation">
+            </section>
+            <section class="header-navigation">
                 <ul>
                     <li><a href="">Студия</a></li>
                     <li><a href="">Портфолио</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
-            </div>
+            </section>
         </nav>
-        <div class="header-contacts">
+        <section class="header-contacts">
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </div>
+        </section>
     </header>
     <main>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-        <div>
+        <section>
             <ul>
                 <li>
                     <section>
@@ -61,7 +61,7 @@
                     </section>
                 </li>
             </ul>
-        </div>
+        </section>
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
@@ -97,14 +97,14 @@
         </section>
     </main>
     <footer>
-        <div class="footer-contacts">
+        <section class="footer-contacts">
             <p>WebStudio</p>
             <ul>
                 <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
                 <li>info@example.com</li>
                 <li>+38 099 111 11 11</li>
             </ul>
-        </div>
+        </section>
     </footer>
 </body>
 
