--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <section class="logo">
-                WebStudio
+                <a href="">WebStudio</a>
             </section>
             <section class="header-navigation">
                 <ul>
@@ -38,8 +38,8 @@
             <ul>
                 <li>
                     <section>
-                        <h4>Внимание к деталям</h4>
-                        Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </section>
                 </li>
                 <li>
@@ -61,8 +61,6 @@
                     </section>
                 </li>
             </ul>
-        </section>
-        <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/box1.png" alt="box1" width="370"></li>
@@ -98,11 +96,13 @@
     </main>
     <footer>
         <section class="footer-contacts">
-            <p>WebStudio</p>
+            <section class="logo">
+                <a href="">WebStudio</a>
+            </section>
+            <address>г. Киев, пр-т Леси Украинки, 26</address>
             <ul>
-                <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
-                <li>info@example.com</li>
-                <li>+38 099 111 11 11</li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </section>
     </footer>
