--- a/index.html
+++ b/index.html
@@ -11,23 +11,17 @@
 <body>
     <header>
         <nav>
-            <section class="logo">
-                <a href="">WebStudio</a>
-            </section>
-            <section class="header-navigation">
-                <ul>
-                    <li><a href="">Студия</a></li>
-                    <li><a href="">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
-                </ul>
-            </section>
-        </nav>
-        <section class="header-contacts">
+            <a href="">WebStudio</a>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
-        </section>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
         <section>
@@ -35,32 +29,27 @@
             <button type="button">Заказать услугу</button>
         </section>
         <section>
+            <h2>Наші переваги</h2>
             <ul>
                 <li>
-                    <section>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </section>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <section>
-                        <h4>Пунктуальность</h4>
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </section>
+                    <h4>Пунктуальность</h4>
+                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                 </li>
                 <li>
-                    <section>
-                        <h4>Планирование</h4>
-                        Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </section>
+                    <h4>Планирование</h4>
+                    Равным образом консультация с широким активом в значительной степени обуславливает.
                 </li>
                 <li>
-                    <section>
-                        <h4>Современные технологии</h4>
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </section>
+                    <h4>Современные технологии</h4>
+                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                 </li>
             </ul>
+        </section>
+        <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/box1.png" alt="box1" width="370"></li>
@@ -73,38 +62,34 @@
             <ul>
                 <li>
                     <img src="./images/igor.jpg" alt="Игорь Демьяненко" width="270">
-                    <p>Игорь Демьяненко</p>
+                    <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/olga.jpg" alt="Ольга Репина" width="270">
-                    <p>Ольга Репина</p>
+                    <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nikolai.jpg" alt="Николай Тарасов" width="270">
-                    <p>Николай Тарасов</p>
+                    <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/mikhail.jpg" alt="Михаил Ермаков" width="270">
-                    <p>Михаил Ермаков</p>
+                    <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <section class="footer-contacts">
-            <section class="logo">
-                <a href="">WebStudio</a>
-            </section>
+            <a href="">WebStudio</a>
             <address>г. Киев, пр-т Леси Украинки, 26</address>
             <ul>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
-        </section>
     </footer>
 </body>
 
